--- a/assets/scss/components/_sections.scss
+++ b/assets/scss/components/_sections.scss
@@ -7,6 +7,7 @@ html {
 	display: block;
 	max-width: 100%;
 	height: auto;
+	width: 10000px;
 }
 
 .main {
@@ -111,6 +112,8 @@ html {
 			z-index: 10;
 			left: 50%;
 			transform: translateX(-50%);
+			width: 100%;
+			max-width: 30em;
 		}
 		footer {
 			position: absolute;
